--- a/assets/css/menu.css
+++ b/assets/css/menu.css
@@ -8,7 +8,7 @@ height:210px;
 width:49%;
 }
 #one:hover,#two:hover,#three:hover,#four:hover {
-    background:black;
+    background:white;
 }
 #two
 {
