--- a/css/my.css
+++ b/css/my.css
@@ -231,6 +231,8 @@ body
 -moz-background-size: cover;
 -ms-background-size: cover;
 -o-background-size: cover;
+background-size: cover;
+
 }
 
 #five
