--- a/css/carousel.css
+++ b/css/carousel.css
@@ -376,13 +376,13 @@ margin-top:70px;
 		font-size:33px;
 		margin-left:-15px;
 		margin-top:-13px;
-		color:green;
+		color:blue;
 		}
 	.namea {
 			font-size:20px;
 			margin-top:-10px;
 			margin-left:-10px;
-			color:green;
+			color:blue;
 		}
 	.nameb{
 			color:red;
