--- a/css/carousel.css
+++ b/css/carousel.css
@@ -147,23 +147,29 @@ margin-top:70px;
 @media (max-width: 768px) {
 
 	.name{
-		font-size:33px;
+		font-size:55px;
 		margin-left:-15px;
-		margin-top:-13px;
+		margin-top:-5px;
 		color:#0066ff;
 		}
 	.namea {
-			font-size:20px;
-			margin-top:-10px;
-			margin-left:-10px;
+			font-size:25px;
+			margin-top:-42px;
+			margin-left:25px;
 			color:#0066ff;
 		}
 	.nameb{
+			color:#0066ff;
+			font-size:19px;
+			margin-top:-13px;
+			margin-left:25px;
+		}
+	.namec{
 			color:green;
 			font-size:15px;
 			font-weight:bold;
-			margin-top:-17px;
-			margin-left:101px;
+			margin-top:-12px;
+			margin-left:126px;
 		}
 	.vision{
 		background-color:transparent;
@@ -275,26 +281,31 @@ margin-top:70px;
     font-size: 50px;
   }
 
-		.name{
-		font-size:33px;
+	.name{
+		font-size:55px;
 		margin-left:-15px;
-		margin-top:-13px;
+		margin-top:-5px;
 		color:#0066ff;
 		}
 	.namea {
-			font-size:20px;
-			margin-top:-10px;
-			margin-left:-10px;
+			font-size:25px;
+			margin-top:-42px;
+			margin-left:25px;
 			color:#0066ff;
 		}
 	.nameb{
+			color:#0066ff;
+			font-size:20px;
+			margin-top:-13px;
+			margin-left:25px;
+		}
+	.namec{
 			color:green;
 			font-size:15px;
 			font-weight:bold;
-			margin-top:-17px;
-			margin-left:101px;
-		}
-	.vision{
+			margin-top:-12px;
+			margin-left:130px;
+		}	.vision{
 		background-color:transparent;
 		width:100%;
 		height:290px;
@@ -373,23 +384,29 @@ margin-top:70px;
     margin-top: 120px;
   }
 	.name{
-		font-size:33px;
+		font-size:55px;
 		margin-left:-15px;
-		margin-top:-13px;
+		margin-top:-5px;
 		color:#0066ff;
 		}
 	.namea {
-			font-size:20px;
-			margin-top:-10px;
-			margin-left:-10px;
+			font-size:25px;
+			margin-top:-42px;
+			margin-left:25px;
 			color:#0066ff;
 		}
 	.nameb{
+			color:#0066ff;
+			font-size:20px;
+			margin-top:-13px;
+			margin-left:25px;
+		}
+	.namec{
 			color:green;
 			font-size:15px;
 			font-weight:bold;
-			margin-top:-17px;
-			margin-left:101px;
+			margin-top:-12px;
+			margin-left:130px;
 		}
 	.about{
 		background-color:transparent;
